--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "1.0.0-beta.14",
     "react-dom": "16.8.6",
     "react-scripts": "3.0.1",
+    "react-select": "3.0.8",
     "styled-components": "4.4.0"
   },
   "devDependencies": {
