--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "16.8.6",
     "react-scripts": "3.0.1",
     "react-select": "3.0.8",
-    "styled-components": "4.4.0"
+    "styled-components": "4.4.0",
+    "typescript": "3.6.4"
   },
   "devDependencies": {
     "typescript": "3.3.3"
