--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@ant-design/icons": "2.1.1",
     "@ant-design/icons-react": "2.0.1",
+    "@types/json-schema": "7.0.3",
     "jsonata": "1.7.0",
     "react": "16.8.6",
     "react-bootstrap": "1.0.0-beta.14",
@@ -14,7 +15,7 @@
     "react-scripts": "3.2.0",
     "react-select": "3.0.8",
     "styled-components": "4.4.0",
-    "typescript": "3.6.4"
+    "typescript": "3.4.5"
   },
   "devDependencies": {
     "typescript": "3.3.3"
