--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "3.2.0",
     "react-select": "3.0.8",
     "styled-components": "4.4.0",
-    "typescript": "3.4.5"
+    "typescript": "3.4.5",
+    "unstated-next": "1.1.0"
   },
   "devDependencies": {
     "typescript": "3.3.3"
