LV: Switch to jsonata-ui-core

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@ant-design/icons-react": "2.0.1",
     "@types/json-schema": "7.0.3",
     "jsonata": "1.7.0",
+    "jsonata-ui-core": "1.0.1",
     "react": "16.8.6",
     "react-bootstrap": "1.0.0-beta.14",
     "react-dom": "16.8.6",
