--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "dependencies": {
     "@ant-design/icons": "2.1.1",
     "@ant-design/icons-react": "2.0.1",
+    "@mrblenny/react-flow-chart": "0.0.8",
     "@types/json-schema": "7.0.3",
     "jsonata": "1.7.0",
-    "jsonata-ui-core": "1.0.1",
+    "jsonata-ui-core": "1.7.0",
     "react": "16.8.6",
     "react-bootstrap": "1.0.0-beta.14",
     "react-dom": "16.8.6",
