Initial MD grid layout

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dist"
   ],
   "dependencies": {
+    "@material-ui/core": "^4.9.2",
     "jsonata": "1.7.0",
     "jsonata-ui-core": "^1.7.12",
     "react": "16.8.6",
