--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsonata-visual-editor",
-  "version": "0.4.1-4",
+  "version": "0.4.1",
   "description": "Visual editor for JSONata expressions. Themeable to your needs, default theme is Boostrap 4",
   "keywords": [
     "jsonata"
