--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "jotai": "^1.7.7",
+    "jotai-molecules": "^1.1.0",
     "jsonata": "^1.8.6",
     "jsonata-ui-core": "^1.7.12"
   }
