Fixes to get storybook running

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
-    "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why",
     "storybook": "start-storybook -p 6006",
@@ -52,6 +51,8 @@
     }
   ],
   "devDependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@ant-design/icons-react": "^2.0.1",
     "@babel/core": "^7.17.9",
     "@size-limit/preset-small-lib": "^7.0.8",
     "@storybook/addon-essentials": "^6.4.20",
@@ -61,13 +62,16 @@
     "@storybook/react": "^6.4.20",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/styled-components": "^5.1.25",
     "babel-loader": "^8.2.4",
     "husky": "^7.0.4",
     "react": "^18.0.0",
-    "react-bootstrap": "^2.2.3",
+    "react-bootstrap": "1.0.0-beta.14",
     "react-dom": "^18.0.0",
     "react-is": "^18.0.0",
+    "react-select": "^5.4.0",
     "size-limit": "^7.0.8",
+    "styled-components": "^5.3.5",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.6.3"
