--- a/package.json
+++ b/package.json
@@ -15,32 +15,30 @@
   ],
   "dependencies": {
     "jsonata": "1.7.0",
-    "jsonata-ui-core": "^1.7.12",
-    "unstated-next": "1.1.0"
+    "jsonata-ui-core": "^1.7.12"
   },
   "peerDependencies": {
     "react": ">=16.8.6"
   },
   "devDependencies": {
-    "@ant-design/icons": "2.1.1",
-    "@ant-design/icons-react": "2.0.1",
-    "@mrblenny/react-flow-chart": "0.0.8",
     "@types/json-schema": "7.0.3",
-    "microbundle": "0.11.0",
+    "@types/react": "^16.14.46",
+    "npm-run-all": "^4.1.5",
     "react": "16.8.6",
-    "react-bootstrap": "1.0.0-beta.14",
     "react-dom": "16.8.6",
     "react-scripts": "3.2.0",
-    "react-select": "3.0.8",
-    "styled-components": "4.4.0",
-    "typescript": "3.4.5"
+    "tsup": "^7.2.0",
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "microbundle -f cjs",
-    "dev": "microbundle watch",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "run-p dev:*",
+    "dev": "run-p dev:*",
+    "dev:tests": "vitest --watch",
+    "build": "tsup src/index.ts --dts",
+    "test": "run-p test:*",
+    "test:code": "vitest run",
+    "test:types": "vitest typecheck"
   },
   "browserslist": [
     ">0.2%",
